<resources>
    <string name="app_name">GimStopWatch</string>
    <string name="hello">hello</string>
    <string name="how_much_proteins_text">Белков:</string>
    <string name="how_much_fats_text">Жиров:</string>
    <string name="how_much_carbohydrates_text">Углеводов:</string>
    <string name="user_name">Новый пользователь</string>
    <string name="_21">ИМТ: 21</string>
    <string name="add">Добавить</string>
    <string name="nutrients_ratio">Соотношение нутриентов</string>
    <string name="cal_daily_norm">Дневная норма калорий</string>
    <string name="settings">Настройки</string>
    <string name="user_data">Данные пользователя</string>
    <string name="recovery_timer">Таймер отдыха</string>
    <string name="enter_good">Начните вводить наименование продукта</string>
    <string name="grams">гр.</string>
    <string name="how_much_calories_text">Калорийность:</string>
    <string name="calories">кКал.</string>
    <string name="nutrients_in_100">В 100 гр. продукта содержится:</string>
    <string name="add_amount_in_grams">Введите кол-во в граммах:</string>
    <string name="nutrients_daily">С начала дня Вы употребили:</string>
    <string name="no_data">На сегодня пока нет данных. Увы.</string>
    <string name="title_activity_first_launch">FirstLaunchActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="nutrients_explain" formatted="false">Идеальное соотношение нутриентов для активного образа жизни: 35% — белки, 15% — жиры и 50% — углеводы.></string>
    <string name="your_ration_today">Ваш рацион сегодня</string>
    <string name="charts_text">Успехи и достижения</string>
    <string name="calories_label">Калорий</string>
    <string name="proteins_label">Белков</string>
    <string name="fats_label">Жиров</string>
    <string name="carbohydrates_label">Углеводов</string>
    <string name="you_eaten_today">С начала дня Вы употребили:</string>
</resources>
