<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:overScrollMode="never"
    android:scrollbars="none">

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/divider"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="125dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rations_chart"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:overScrollMode="never"/>

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/divider"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="125dp" />

        <TextView
            android:id="@+id/chart_details_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="32dp"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="18sp" />

    <TableLayout
        android:id="@+id/charts_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="32dp"
        android:paddingLeft="32dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/calories"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/calories_label"
                android:textColor="@color/primary_text" />

            <TextView
                android:id="@+id/calories_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/proteins"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/proteins_label"
                android:textColor="@color/nutrientBlue" />

            <TextView
                android:id="@+id/proteins_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/fats"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/fats_label"
                android:textColor="@color/nutrientYellow" />

            <TextView
                android:id="@+id/fats_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/carbohydrates"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/carbohydrates_label"
                android:textColor="@color/nutrientGreen" />

            <TextView
                android:id="@+id/carbohydrates_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text" />
        </TableRow>


    </TableLayout>
</LinearLayout>