<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:overScrollMode="never"
    android:scrollbars="none"
    app:cardElevation="0dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableLayout
                android:id="@+id/food_card_table_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/food_card_header"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:paddingStart="16dp"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/food_card_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="16dp"
                        android:paddingStart="32dp" />

                </TableRow>

            </TableLayout>

            <TableLayout
                android:id="@+id/food_card_table"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/food_card_calories"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingStart="32dp"
                        android:text="@string/calories_label"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/food_card_calories_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/food_card_proteins"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="32dp"
                        android:text="@string/proteins_label"
                        android:textColor="@color/nutrientBlue"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/food_card_proteins_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/food_card_fats"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="32dp"
                        android:text="@string/fats_label"
                        android:textColor="@color/nutrientYellow"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/food_card_fats_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/food_card_carbohydrates"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="32dp"
                        android:text="@string/carbohydrates_label"
                        android:textColor="@color/nutrientGreen"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/food_card_carbohydrates_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="@color/primary_text"
                        android:textSize="14sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp">

                </TableRow>
            </TableLayout>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>